--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,23 @@
 .App {
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+  line-height: 120%;
   background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
+.App-body {
   min-height: 100vh;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 14px;
   margin-left: 20px;
   margin-right: 20px;
-  color: white;
+  color: #c9cacc;
 }
 
 .App-link {
