--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
 .App {
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
-  line-height: 120%;
   background-color: #282c34;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+h4 {
+  margin-bottom: 5px;
+}
+
+p {
+  margin-top: 5px;
+}
+
 
 .App-body {
   min-height: 100vh;
