--- a/index.css
+++ b/index.css
@@ -1,24 +1,25 @@
 body {
-  font-family: Consolas, monaco, monospace;
-  max-width: 800px;
+  font-family: 'Corben', cursive;
+  display: flex;
+  justify-content: center;
+}
+
+.content {
   margin: 3em;
-  color: #333333;
-  font-size: 1em;
-  background-image: url("static/windows-xp.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  max-width: 800px;
 }
 
-.window-body {
-  padding: 10px;
+h1 {
+  font-weight: 400;
+  font-size: 2.2em;
 }
 
-.window {
-  position: absolute;
-  z-index: 10;
-  width: 400px;
+h2 {
+  font-weight: 400;
+  font-size: 1.8em;
 }
 
-.title-bar {
-  cursor: move;
+p {
+  font-size: 1.1em;
+  font-weight: 300;
 }
