--- a/index.css
+++ b/index.css
@@ -2,11 +2,15 @@ body {
   font-family: 'Corben', cursive;
   display: flex;
   justify-content: center;
+  background-color:rgb(255, 248, 240);
+  margin-bottom: 200px;
+  height: 100%;
 }
 
 .content {
   margin: 3em;
   max-width: 800px;
+  height: 100%;
 }
 
 h1 {
@@ -22,4 +26,9 @@ h2 {
 p {
   font-size: 1.1em;
   font-weight: 300;
+}
+
+.profile-pic {
+  width: 20em;
+  height: 20em;
 }
