--- a/index.css
+++ b/index.css
@@ -5,37 +5,40 @@ body {
   background-color:rgb(255, 248, 240);
   margin-bottom: 200px;
   height: 100%;
+  font-size: 16px;
 }
 
 .content {
-  margin: 3em;
+  margin: 3rem;
   max-width: 800px;
   height: 100%;
+  width: 90%;
 }
 
 h1 {
   font-weight: 400;
-  font-size: 2.2em;
+  font-size: 2.2rem;
 }
 
 h2 {
   font-weight: 400;
-  font-size: 1.8em;
+  font-size: 1.8rem;
 }
 
 h3 {
   font-weight: 500;
-  font-size: 1.4em;
+  font-size: 1.4rem;
 }
 
 p {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   font-weight: 400;
+  line-height: 1.6;
 }
 
 .profile-pic {
-  width: 20em;
-  height: 20em;
+  width: min(20rem, 90%);
+  height: auto;
   border: 8px solid rgb(155, 148, 140);
   border-radius: 32px;
 }
@@ -48,11 +51,12 @@ a {
 a sup {
   padding: 0 2px;
   color: rgb(155, 148, 140);
+  font-size: 0.8rem;
 }
 
 .links {
-  margin-top: 2em;
-  padding-top: 2em;
+  margin-top: 2rem;
+  padding-top: 2rem;
   border-top: 1px solid rgb(155, 148, 140);
 }
 
@@ -67,4 +71,14 @@ a sup {
 
 .links a:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+  .content {
+    margin: 1.5rem;
+  }
+  
+  body {
+    margin-bottom: 100px;
+  }
 }
